--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple Homepage</title>
+</head>
+<body>
+    <h1>Welcome to Our Organization</h1>
+    <p>We focus on Reinforcement Learning and Optimization in Salzburg.</p>
+    <a href="https://www.example.com">Learn More About Us</a>
+</body>
+</html>
