--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Welcome to Our Organization</h1>
     <p>We focus on Reinforcement Learning and Optimization in Salzburg.</p>
-    <a href="www.plus.ac.at/aihi/der-fachbereich/ida-lab/teams/sarl/">Learn More About Us</a>
+    <a href="https://www.plus.ac.at/aihi/der-fachbereich/ida-lab/teams/sarl/">Learn More About Us At Our University Homepage</a>
 </body>
 </html>
