--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
-<html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Homepage</title>
+    <title>SARL Team Homepage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif; /* Adds a more readable typeface */
+            margin: 20px;
+            background-color: #f4f4f4; /* Light grey background */
+            color: #333; /* Dark grey text for better readability */
+        }
+        h1 {
+            color: #0056b3; /* A blue color for headings */
+        }
+        a {
+            color: #d63384; /* A distinct color for links */
+            text-decoration: none; /* Removes underline from links */
+        }
+        a:hover {
+            text-decoration: underline; /* Adds underline on hover for better user interaction */
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Our Organization</h1>
-    <p>We focus on Reinforcement Learning and Optimization in Salzburg.</p>
-    <a href="https://www.plus.ac.at/aihi/der-fachbereich/ida-lab/teams/sarl/">Learn More About Us At Our University Homepage</a>
+    <header>
+        <h1>Welcome to the SARL (Smart Analytics and Reinforcement Learning) Team Homepage</h1>
+    </header>
+    <section>
+        <p>We focus on Reinforcement Learning and Optimization in Salzburg.</p>
+    </section>
+    <footer>
+        <a href="https://www.plus.ac.at/aihi/der-fachbereich/ida-lab/teams/sarl/" target="_blank">Learn more about us at our university homepage</a>
+        <br>
+        <a href="mailto:simon.hirlaender@plus.ac.at">Email our team leader Simon Hirlaender</a>
+    </footer>
 </body>
 </html>
