--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Current activities</title>
+  <title>SARL Team University Salzburg</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +31,7 @@
       <div class="content-table flex-column">
         <!-- Summary Intro -->
         <div class="flex-row" style="background: #e0e0e0; padding: 10px; margin-bottom: 20px;">
-          <h2>Overview of Our Current Activities</h2>
+          <h2>Overview of the SARL (Smart Analytics and Reinforcement Learning) Activities</h2>
           <p>At the SARL team, led by Simon Hirlaender, we explore cutting-edge reinforcement learning applications from theoretical research to industry solutions. Our team at PLUS University Salzburg focuses on multivariate time series, Bayesian methods, and the synergistic integration of human and artificial intelligence to address global challenges.</p>
         </div>
         <!-- Detailed Content Begins -->
