--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <div class="flex-item flex-column">
             <!-- Contacts and Affiliations -->
             <p class="text text-large">
-              <a target="_blank" href="javascript:void(0)">Simon Hirlaender</a> (at) plus.ac.at<br>
-              <a target="_blank" href="https://www.plus.ac.at/aihi/der-fachbereich/ida-lab/">IDA Lab</a><br>
+              <a href="mailto:simon.hirlaender@plus.ac.at">Simon Hirlaender</a> (at) plus.ac.at<br>
+              <a target="_blank" href="https://www.plus.ac.at/aihi/der-fachbereich/ida-lab/teams/sarl/">Team</a><br>
               <a target="_blank" href="https://www.plus.ac.at/?lang=en&page_id=298879">Department of Artificial Intelligence and Human Interfaces</a><br>
               <a target="_blank" href="https://www.plus.ac.at/digital-and-analytical-sciences/the-faculty/?lang=en">Faculty of Digital and Analytical Sciences</a><br>
               <a target="_blank" href="https://www.plus.ac.at">PLUS University Salzburg, Austria</a><br>
