--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="content-table flex-column">
         <!-- Summary Intro -->
         <div class="flex-row" style="background: #e0e0e0; padding: 10px; margin-bottom: 20px;">
-          <h2>Overview of the SARL (Smart Analytics and Reinforcement Learning) Activities</h2>
+          <h2>Overview of the SARL (Smart Analytics and Reinforcement Learning) Team</h2>
           <p>At the SARL team, led by Simon Hirlaender, we explore cutting-edge reinforcement learning applications from theoretical research to industry solutions. Our team at PLUS University Salzburg focuses on multivariate time series, Bayesian methods, and the synergistic integration of human and artificial intelligence to address global challenges.</p>
         </div>
         <!-- Detailed Content Begins -->
