--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
       <h2>Recent Publications</h2>
       <p class="section-intro">Our latest research contributions to the field:</p>
 
+      <p class="section-intro">Our team actively contributes to the reinforcement learning research community. Below are our recent publications, including our latest contribution to the RL4AA'24 Workshop held at Paris-Lodron-Universität Salzburg.</p>
       <div class="publications-list">
         <!-- Publications will be loaded via JavaScript -->
         <div class="publication-item">
