--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#research">Research</a></li>
           <li><a href="#team">Team</a></li>
+          <li><a href="#announcements">Announcements</a></li>
           <li><a href="#publications">Publications</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
